feat: bond token impl

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fungible_token"
+name = "bond_token"
 version = "0.1.0"
 authors = ["Yoonsung <yoonsung@dsrvlabs.com>"]
 edition = "2018"
@@ -19,3 +19,14 @@ overflow-checks = true
 
 [dependencies]
 near-sdk = "2.0.0"
+uint = { version = "0.8.3", default-features = false }
+
+[dev-dependencies]
+lazy_static = "1.4.0"
+quickcheck = "0.9"
+quickcheck_macros = "0.9"
+log = "0.4"
+env_logger = { version = "0.7.1", default-features = false }
+near-crypto = { git = "https://github.com/nearprotocol/nearcore.git" }
+near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
+near-runtime-standalone = { git = "https://github.com/nearprotocol/nearcore.git" }
