--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -50,20 +50,20 @@ RUN apt-get update \
     && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
     #
     # install Nearup
-    && curl --proto '=https' --tlsv1.2 -sSfL https://up.near.dev | python3 \
+    # && curl --proto '=https' --tlsv1.2 -sSfL https://up.near.dev | python3 \
     #
     # Clean up
     && apt-get autoremove -y \
     && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /var/lib/apt/lists/*
     #
     # Install Dependencies for NearD 
-    && apt-get update \
-    && apt-get -y install git binutils-dev libcurl4-openssl-dev zlib1g-dev libdw-dev libiberty-dev cmake gcc g++ python protobuf-compiler libssl-dev pkg-config clang llvm \
-    && git clone https://github.com/nearprotocol/nearcore.git \
-    && cd nearcore \
-    && git checkout 1.11.1 \
-    && make release
+    # && apt-get update \
+    # && apt-get -y install git binutils-dev libcurl4-openssl-dev zlib1g-dev libdw-dev libiberty-dev cmake gcc g++ python protobuf-compiler libssl-dev pkg-config clang llvm \
+    # && git clone https://github.com/nearprotocol/nearcore.git \
+    # && cd nearcore \
+    # && git checkout 1.11.1 \
+    # && make release
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
