--- a/tokenizer/Cargo.toml
+++ b/tokenizer/Cargo.toml
@@ -13,3 +13,12 @@ near-sdk = "2.0.0"
 uint = { version = "0.8.3", default-features = false }
 token = { path = "../token" }
 registry = { path = "../registry" }
+
+[dev-dependencies]
+lazy_static = "1.4.0"
+log = "0.4"
+env_logger = { version = "0.7.1", default-features = false }
+near-crypto = { git = "https://github.com/nearprotocol/nearcore.git" }
+near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
+near-vm-errors = { git = "https://github.com/nearprotocol/nearcore.git" }
+near-runtime-standalone = { git = "https://github.com/nearprotocol/nearcore.git" }
